getFirst fix